# gadjit

./: .gitignore  README.md  config.yaml.template  gadjit.py  lambda_handler.py  models.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  utils.py
.github/: CODEOWNERS  branch-protection.yml  tests-required.yml
.github/workflows/: test.yml
gadjit/: __main__.py  handler.py  models.py  utils.py
gadjit/plugins/iga/conductorone_cron/: api.py  plugin.py
gadjit/plugins/llm/aws_api_gateway_openai_proxy/: plugin.py
gadjit/plugins/llm/openai/: colprinter.py  plugin.py
gadjit/plugins/scoring/requester_profile_attribute_proximity/: plugin.py
plugins/iga/conductorone/: api.py  plugin_conductorone_cron.py
plugins/iga/conductorone_cron/: api.py  plugin.py
plugins/llm/aigateway/: aigateway.py
plugins/llm/aws_api_gateway_openai_proxy/: plugin.py
plugins/llm/openai/: plugin.py
plugins/scoring/requester_profile_attribute_proximity/: plugin.py
tests/: conftest.py  test_handler.py  test_models.py  test_requester_profile_attribute_proximity_plugin.py  test_utils.py
