[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gadjit"
version = "0.1.0"
description = "Gadjit - Access Approval Workflow"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.34.152",
    "requests>=2.32.3",
    "PyYAML>=6.0.1",
    "click>=8.1.7",
    "Flask>=3.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v" 